--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,20 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "outDir": "build",
+    "outDir": "dist",
     "sourceMap": false,
     "strict": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "declaration": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/**/*.test.ts"],
 }
